# spot_nav_behaviors

./: README.md
spot_nav_flexbe_behaviors/: CMakeLists.txt  package.xml  setup.py
spot_nav_flexbe_behaviors/manifest/: a__spot_complete_setup.xml  a__spot_complete_setup1.xml  a__swap_lease_test_v3.xml  example_behavior.xml  folder_upload_test.xml  process_image.xml  process_image_v2.xml  process_image_v3.xml  spot_arm_joint_move.xml  spot_arm_joint_move_v2.xml  spot_arm_joint_move_v3.xml  spot_arm_stow_unstow_test.xml  spot_complete_setup.xml  spot_complete_setup_v2.xml  spot_complete_setup_v3.xml  spot_complete_setup_v4.xml  spot_dock_test.xml  spot_dock_test_w__localization.xml  spot_dock_test_w__pause.xml  spot_grasp_test.xml  spot_gripper_test.xml  spot_gripper_test_v2.xml  spot_gripper_test_v3.xml  spot_gripper_test_v4.xml  spot_image_capture_test.xml  spot_localization_test.xml  spot_map_upload_test.xml  spot_navigation_test.xml  spot_navigation_test___multi_reps.xml  spot_navigation_test___multi_reps__w_o_pause_.xml  spot_navigation_test___multi_reps_w__dock.xml  spot_setup_test.xml  spot_sit_stand_test.xml  (+5 more)
spot_nav_flexbe_states/: CMakeLists.txt  package.xml  setup.py
spot_nav_flexbe_states/src/spot_nav_flexbe_states/: acquire_lease.py  arm_move_joints.py  arm_move_joints_name.py  arm_stow_unstow.py  capture_image.py  claim_lease.py  counter.py  dock.py  get_arm_data.py  get_joint_pose.py  grasp.py  gripper_control.py  localize.py  navigate.py  pause.py  power.py  process.py  return_lease.py  setup_spot.py  stand_sit.py  swap_lease.py  upload_map.py
(+37 files in other folders)
